--- a/react-frontend/src/style/Graph.css
+++ b/react-frontend/src/style/Graph.css
@@ -13,7 +13,7 @@
 
   #graph-container {
     flex: 1;
-    border-right: 1px solid #ddd;
+    border-right: 2px solid #334155;
     position: relative;
   }
 
@@ -22,7 +22,7 @@
     background: #1f2937;
     padding: 20px;
     overflow-y: auto;
-    border-left: 1px solid #ddd;
+    border-left: 1px solid #334155;
     color:#9ca3af;
     transition: transform 0.3s ease-in-out;
   }
@@ -168,4 +168,48 @@
     }
   }
 
+  .top-header {
+    height: 60px;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-right: 2px solid #334155;
+    background-color:#1f2937;
+}
+
+.header-page-title {
+    font-size: 1.4rem;
+    font-weight: 500;
+    color:#9ca3af;
+}
+
+.node-info-sidebar{
+  width:300px;
+  border-right: 2px solid #334155;
+  margin-left:20px;
+  color: #9ca3af;
+}
+
+.dot {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 8px;
+  transition: background-color 0.3s ease;
+}
+
+.system-list-button {
+  padding: 6px 12px;
+  background: #007bff;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+}
+
+.system-list-button:hover {
+  background: #0056b3;
+}
   
