--- a/react-frontend/src/style/Graph.css
+++ b/react-frontend/src/style/Graph.css
@@ -13,8 +13,13 @@
 
   #graph-container {
     flex: 1;
-    border-right: 2px solid #334155;
+    border-right: 2px solid #2a394e;
     position: relative;
+  background-color: #121212;
+  background-image: 
+    linear-gradient(to right, rgba(255, 255, 255, 0.07) 1px, transparent 1px),
+    linear-gradient(to bottom, rgba(255, 255, 255, 0.07) 1px, transparent 1px);
+  background-size: 20px 20px; 
   }
 
   .sidebar {
